Configuration ready for deployment